--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,37 +39,23 @@ jobs:
 
           echo "Validação mínima concluída com sucesso."
 
-  test-api:
+  docker-build:
     runs-on: ubuntu-latest
-    needs: ci-minimo
+    needs: ci-minimo # Depende da validação de estrutura
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Configurar Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
+      - name: Build da imagem Docker
+        run: docker build -t devops-lab-api:ci ./app
 
-      - name: Instalar dependências da API
-        run: |
-          cd app
-          pip install -r requirements.txt
+      - name: Rodar container em background
+        run: docker run -d -p 5000:5000 --name api devops-lab-api:ci
 
       - name: Instalar Newman (CLI Postman)
-        # Newman requer NodeJS, o ambiente ubuntu-latest já vem com ele
         run: npm install -g newman
 
-      - name: Rodar API em background
+      - name: Executar testes Postman contra container
         run: |
-          cd app
-          # Usa nohup e & para rodar a API em background
-          nohup python main.py &
-          echo "API rodando em background. Aguardando 5 segundos para subir..."
-          # Necessário esperar a API iniciar antes de testar
-          sleep 5
-
-      - name: Executar testes Postman
-        run: |
-          newman run tests/postman/health-check.postman_collection.json
+          newman run tests/postman/health-check.postman_collection.json --env-var baseUrl=http://localhost:5000
